# LordCoder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PERFORMANCE.md  README.md  TROUBLESHOOTING.md  check-python.bat  install.bat  lordcoder-312.bat  lordcoder.yml  pyproject.toml  requirements.txt  run-lordcoder.bat  setup.py  simple-start.bat  start-lordcoder.bat
.github/workflows/: ci.yml  release.yml
.test-temp/cli-7d6a50c2404643d1b345a2a599e885d6/: lordcoder.toml
.test-temp/config-342810ad287841ba969db2f4fd26af90/: lordcoder.toml
.test-temp/config-5e5d998cf1844140a673fef5110100e3/: .lordcoder-model
.test-temp/config-8f4fd4534db54ff796880323c36fe2af/: lordcoder.yml
.test-temp/doctor-07e81847ca704cc8ad66e41463bed7a7/: lordcoder.toml
.test-temp/doctor-3dba4cdfcbce4f28b9b9114b319fa168/: lordcoder.toml
.test-temp/doctor-c1ee93a6bbfe4112ba5372cd91892bd8/: lordcoder.yml
.test-temp/model-selector-521451e23d954392a68ef48aaf1243be/: .lordcoder-model
.test-temp/model-selector-70aaac4c7ebd4a7e9c0e92732b9b7840/: lordcoder.yml
.test-temp/model-selector-c9e871b762194b80951cc94a8a05f24e/: lordcoder.effective.yml
.tmp-selector-test/: lordcoder.effective.yml  lordcoder.yml
.windsurf/workflows/: commit.md  setup.md  test.md
deploy/: README.md
deploy/macos/: com.lordcoder.core.plist
docs/: README.md  TROUBLESHOOTING.md  TROUBLESHOOTING_NATIVE.md
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_doctor.py  test_model_selector.py  test_packaging.py  test_policy.py  test_runtime.py  test_runtime_factory.py  test_utils.py
(+26 files in other folders)
